--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -345,3 +345,29 @@ table#filter-history-table {
     padding-left: 5px !important;
     padding-right: 5px !important;
 }
+
+.card-100 {
+    height: 100%;
+}
+
+.card-body {
+    overflow-y: auto;
+    padding: 0 !important;
+}
+
+.card-padding {
+    padding: 20px !important;
+}
+
+.canvas-container {
+    height: 100%;
+    width: 100%;
+}
+
+.center-text {
+    font-size: 14pt;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
