Update collection uploader

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -456,7 +456,7 @@
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body card-padding">
                         <div id="occurrence-data">
                         </div>
                         <div class="container">
