--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -28,6 +28,8 @@
                         <a class="dropdown-item" id="navbar-geonode" href="/wagtail-pages/">WAGTAIL PAGES</a>
                         <a class="dropdown-item" id="navbar-geonode" href="/upload-taxa/">UPLOAD TAXA</a>
                         <a class="dropdown-item" id="navbar-geonode" href="/upload-collections/">UPLOAD COLLECTIONS</a>
+                        <a class="dropdown-item" id="navbar-geonode" href="/dashboard-management/">EDIT DASHBOARD</a>
+                        <a class="dropdown-item" id="navbar-geonode" href="/taxa-management/">EDIT TAXA</a>
                          {% if user.is_authenticated %}
                              <div class="dropdown-divider"></div>
                             <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
