Allow userr to be able edit their site

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -69,6 +69,7 @@
         const defaultCenterMap = '{{ preferences.SiteSetting.default_center_map }}';
         const defaultExtentMap = '{{ preferences.SiteSetting.default_extent_map }}';
         const defaultBasemap = '{{ preferences.SiteSetting.default_basemap }}';
+        const userID = {% if user.id %}{{ user.id }}{% else %}null{% endif %};
     </script>
     {% block extra_head %}
 
