Add footer and twitter

--- a/bims/templates/bims/blog_page.html
+++ b/bims/templates/bims/blog_page.html
@@ -9,7 +9,6 @@
 
 {% block head %}
 
-    <link href="{% static "css/fonts.css" %}" rel="stylesheet">
     <link href="{% static "css/clean-blog.css" %}" rel="stylesheet">
     <style>
         .blog-content {
@@ -47,6 +46,11 @@
             <div class="col-lg-8 col-md-10 mx-auto">
                 {% if self.get_ancestors.count > 1 %}
                     {{ page.body | richtext }}
+                        <a class="twitter-share-button"
+                           href="https://twitter.com/intent/tweet?text={{ page.title }}"
+                           data-size="large">
+                            Tweet</a>
+                    </div>
                 {% else %}
                     {% for page in posts %}
                         <div class="post-preview">
@@ -77,10 +81,30 @@
             </div>
         </div>
     </div>
+
+    {% include 'footer.html' %}
 {% endblock %}
 
 {% block foot %}
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script>
+        window.twttr = (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+                t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
+
+            t._e = [];
+            t.ready = function (f) {
+                t._e.push(f);
+            };
+
+            return t;
+        }(document, "script", "twitter-wjs"));
+    </script>
 {% endblock %}
