--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -25,7 +25,7 @@
                         {% if is_sass_enabled %}
                             <a class="dropdown-item" id="navbar-biblio" href="/sass/list/">SASS</a>
                         {% endif %}
-                        <a class="dropdown-item" id="navbar-geonode" href="/blog/">Blogs</a>
+                        <a class="dropdown-item" id="navbar-geonode" href="/blog/">BLOG</a>
                         <a class="dropdown-item" id="navbar-geonode" href="/upload-taxa/">UPLOAD TAXA</a>
                         <a class="dropdown-item" id="navbar-geonode" href="/upload-collections/">UPLOAD COLLECTIONS</a>
                         <a class="dropdown-item" id="navbar-geonode" href="/harvest-collections/">HARVEST FROM GBIF</a>
