--- a/bims/templates/bims/manual_page.html
+++ b/bims/templates/bims/manual_page.html
@@ -1,10 +1,15 @@
 {% extends 'main_base.html' %}
+{% load static from staticfiles %}
 {% load manual_menu %}
 {% load wagtailcore_tags %}
 {% load wagtailmarkdown %}
 
 {% block head %}
     <style>
+        .menu-container {
+            display: none;
+        }
+
         .menu-container > .card-body {
             padding: 0;
         }
@@ -12,26 +17,39 @@
         .menu-container ul {
             list-style-type: none; /* Remove bullets */
             margin: 0; /* Remove margins */
-            padding-inline-start: 20px;
+            padding-inline-start: 0;
         }
 
         .menu-container .active {
-            color: blue;
+            color: #01413a;
         }
 
         .menu-container li {
             padding-top: 5px;
             padding-bottom: 5px;
+            border-bottom: 1px solid #c4c4c4;
+        }
+
+        hr {
+            max-width: none;
+            border-width: 1px;
         }
     </style>
 {% endblock %}
 
 {% block body_content %}
     <div style="margin-top:120px"></div>
-    <div class="container" style="min-height: 500px">
+    <div class="container" style="min-height: 500px; margin-bottom: 50px;">
         <div class="row">
             <div class="col-3">
                 <div class="card menu-container">
+                    <div class="card-header">
+                        {% if self.get_ancestors|length > 1 %}
+                            <a href="{% pageurl self.get_ancestors.1 %}">{{ self.get_ancestors.1.title }}</a>
+                        {% else %}
+                           {{ page.title }}
+                        {% endif %}
+                    </div>
                     <div class="card-body">
                         {% manual_menu menu page.slug %}
                     </div>
@@ -58,9 +76,36 @@
                 </nav>
 
                 <h1 class="font-weight-bold">{{ page.title }}</h1>
+                {{ page.intro | richtext }}
+                <hr/>
                 {{ page.body | markdown }}
             </div>
         </div>
     </div>
     {% include 'footer.html' %}
+{% endblock %}
+
+{% block foot %}
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script>
+        const addLeftPadding = (elm, padding) => {
+			$.each(elm.children(), function(index, elm) {
+				const $target = $(elm);
+				if ($target.is('ul')) {
+					addLeftPadding($target, padding + 20);
+				} else {
+					if ($target.css('padding-left') === '0px') {
+						$target.css('padding-left', `${padding}px`);
+					}
+				}
+			})
+		}
+
+		$(function () {
+			const $ul = $('.menu-container ul');
+			addLeftPadding($ul, 20);
+			$('.menu-container').show();
+		});
+    </script>
 {% endblock %}
